Fixed file names

--- a/Blank.html
+++ b/Blank.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>The Claw</title>
-	<link rel="stylesheet" href="Lab8.css" />
+	<link rel="stylesheet" href="blank.css" />
 	
 </head>
 
