--- a/Blank.html
+++ b/Blank.html
@@ -8,9 +8,9 @@
 </head>
 
 <body onload=main()>
+	<canvas id="myCanvas" width="800" height="800" style="border:1px solid #000000;"></canvas>
 	<script src="Main.js"></script>
 	<script src="Game.js"></script>
-	<canvas id="myCanvas"></canvas>
 </body>
 
 </html>
