atom code commit?

--- a/Blank.html
+++ b/Blank.html
@@ -4,13 +4,16 @@
 <head>
 	<title>The Claw</title>
 	<link rel="stylesheet" href="blank.css" />
-	
+
 </head>
 
 <body onload=main()>
 	<canvas id="canvas" width="800" height="800" style="border:1px solid #000000;"></canvas>
 	<script src="Main.js"></script>
 	<script src="Game.js"></script>
+	<script src="ScreenManager.js"></script>
+	<script src="Menu.js"></script>
+	<script src="Gameplay.js"></script>
 </body>
 
 </html>
