--- a/Blank.html
+++ b/Blank.html
@@ -14,6 +14,7 @@
 	<script src="ScreenManager.js"></script>
 	<script src="Menu.js"></script>
 	<script src="Gameplay.js"></script>
+	<script src="Scene.js"></script>
 
 </body>
 
