--- a/Blank.html
+++ b/Blank.html
@@ -9,12 +9,15 @@
 
 <body onload=main()>
 	<canvas id="canvas" width="800" height="800" style="border:1px solid #000000;"></canvas>
-	<script src="Main.js"></script>
 	<script src="Game.js"></script>
+	<script src="Main.js"></script>
+	<script src="SpriteClass.js"></script>
+	<script src="staticSprite.js"></script>
+	<script src="Scene.js"></script>
 	<script src="ScreenManager.js"></script>
 	<script src="Menu.js"></script>
 	<script src="Gameplay.js"></script>
-	<script src="Scene.js"></script>
+
 </body>
 
 </html>
