--- a/Blank.html
+++ b/Blank.html
@@ -11,6 +11,7 @@
 	<canvas id="canvas" width="800" height="800" style="border:1px solid #000000;"></canvas>
 	<script src="Game.js"></script>
 	<script src="Main.js"></script>
+	<script src="GamePad.js"></script>
 	<script src="SpriteClass.js"></script>
 	<script src="staticSprite.js"></script>
 	<script src="Scene.js"></script>
