Starting tutorial screen

--- a/Blank.html
+++ b/Blank.html
@@ -16,6 +16,7 @@
 	<script src="scripts/staticSprite.js"></script>
 	<script src="scripts/Scene.js"></script>
 	<script src="scripts/ScreenManager.js"></script>
+	<script src="scripts/Tutorial.js"></script>
 	<script src="scripts/Menu.js"></script>
 	<script src="scripts/Gameplay.js"></script>
 
