--- a/Blank.html
+++ b/Blank.html
@@ -10,6 +10,7 @@
 <body onload=main()>
 	<canvas id="canvas" width="800" height="800" style="border:1px solid #000000;"></canvas>
 	<script src="scripts/Game.js"></script>
+	<script src="scripts/phaser.js"></script>
 	<script src="scripts/Main.js"></script>
 	<script src="scripts/GamePad.js"></script>
 	<script src="scripts/SpriteClass.js"></script>
