--- a/Blank.html
+++ b/Blank.html
@@ -4,10 +4,12 @@
 <head>
 	<title>The Claw</title>
 	<link rel="stylesheet" href="css/blank.css" />
+  <link rel="icon" href="Sprite/favicon.gif"/> 
 
 </head>
 
 <body onload=main()>
+
 	<canvas id="canvas" width="800" height="800" style="border:1px solid #000000;"></canvas>
 
 	<script src="scripts/index.js"></script>
