--- a/Blank.html
+++ b/Blank.html
@@ -4,14 +4,15 @@
 <head>
 	<title>The Claw</title>
 	<link rel="stylesheet" href="css/blank.css" />
-  <link rel="icon" href="Sprite/favicon.gif"/>
+  <!--<link rel="icon" href="Sprite/favicon.gif"/>-->
+	<link rel="icon" type="image/png" href="Sprite/frame_0.png" id="icon"/>
 
 </head>
 
 <body onload=main()>
 
-	<canvas id="canvas" width="800" height="800" style="border:1px solid #000000;"></canvas>
-
+	<!--<canvas id="canvas" width="800" height="800" style="border:1px solid #000000;"></canvas>-->
+	
 	<script src="scripts/index.js"></script>
 	<script src="scripts/phaser.js"></script>
 	<script src="scripts/Game.js"></script>
