--- a/Blank.html
+++ b/Blank.html
@@ -13,6 +13,7 @@
 
 	<!--<canvas id="canvas" width="800" height="800" style="border:1px solid #000000;"></canvas>-->
 	<script src="/socket.io/socket.io.js"></script>
+	<script>var socket = io();</script>
 	<script src="scripts/index.js"></script>
 	<script src="scripts/phaser.js"></script>
 	<script src="scripts/Game.js"></script>
