--- a/Blank.html
+++ b/Blank.html
@@ -9,12 +9,12 @@
 
 </head>
 
-<body onload=main()>
+<body>
 	<!--<canvas id="canvas" width="800" height="800" style="border:1px solid #000000;"></canvas>-->
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="scripts/phaser.js"></script>
 	<script src="scripts/Main.js"></script>
-	<script src="scripts/Game.js"></script>
+  <!--<script src="scripts/Game.js"></script>
 	<script src="scripts/GamePad.js"></script>
 	<script src="scripts/SpriteClass.js"></script>
 	<script src="scripts/staticSprite.js"></script>
@@ -22,7 +22,7 @@
 	<script src="scripts/ScreenManager.js"></script>
 	<script src="scripts/Tutorial.js"></script>
 	<script src="scripts/Menu.js"></script>
-	<script src="scripts/Gameplay.js"></script>
+	<script src="scripts/Gameplay.js"></script>-->
 
 </body>
 
