--- a/Blank.html
+++ b/Blank.html
@@ -11,9 +11,10 @@
 
 <body>
 	<!--<canvas id="canvas" width="800" height="800" style="border:1px solid #000000;"></canvas>-->
+
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="scripts/phaser.js"></script>
-	<script src="phaser-matter-collision-plugin.min.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/phaser-matter-collision-plugin"></script>
 	<script src="scripts/Main.js"></script>
   <!--<script src="scripts/Game.js"></script>
 	<script src="scripts/GamePad.js"></script>
